<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_feed">

    <fragment
            android:id="@+id/nav_feed"
            android:name="com.scaler.microblogs.ui.feed.FeedFragment"
            android:label="@string/title_feed"
            tools:layout="@layout/fragment_feed" />

    <fragment
            android:id="@+id/nav_tags"
            android:name="com.scaler.microblogs.ui.tags.TagsFragment"
            android:label="@string/title_tags"
            tools:layout="@layout/fragment_tags" >
        <action
                android:id="@+id/action_nav_tags_to_tagsDetailsFragment"
                app:destination="@id/tagsDetailsFragment" />
    </fragment>

    <fragment
            android:id="@+id/nav_account"
            android:name="com.scaler.microblogs.ui.account.AccountFragment"
            android:label="@string/title_account"
            tools:layout="@layout/fragment_account" >
        <action
                android:id="@+id/action_nav_account_to_accountEditFragment"
                app:destination="@id/accountEditFragment" />
    </fragment>
    <fragment
            android:id="@+id/tagsDetailsFragment"
            android:name="com.scaler.microblogs.ui.tags.TagsDetailsFragment"
            android:label="fragment_tags_details"
            tools:layout="@layout/fragment_tags_details" >
        <argument
                android:name="tag"
                app:argType="string"
                app:nullable="true" />
    </fragment>
    <fragment
            android:id="@+id/accountEditFragment"
            android:name="com.scaler.microblogs.ui.account.AccountEditFragment"
            android:label="fragment_account_edit"
            tools:layout="@layout/fragment_account_edit" />
</navigation>